RESOLVED FIXED82198
Insertion point jumps when using link detection
https://bugs.webkit.org/show_bug.cgi?id=82198
Summary Insertion point jumps when using link detection
equinux AG
Reported 2012-03-26 06:36:38 PDT
Steps to reproduce: 1. Open the attached HTML document in Safari. 2. Make sure automatic link detection is enabled (Edit > Substitutions > Smart Links). 3. Place the insertion point at the beginning of the text "Lorem ipsum". 4. Type "www.equinux.com". Expected Results: Text field should contain this: www.equinux.comLorem ipsum Actual Results: After typing the second period the insertion point jumps past the word "Lorem". In the end, the text field contains this: www.equinux.Lorem comipsum
Attachments
Sample document (198 bytes, text/html)
2012-03-26 06:37 PDT, equinux AG
no flags
proposed patch (6.42 KB, patch)
2013-04-25 17:08 PDT, Yi Shen
no flags
equinux AG
Comment 1 2012-03-26 06:37:11 PDT
Created attachment 133792 [details] Sample document
Ryosuke Niwa
Comment 2 2012-05-02 23:08:38 PDT
Could someone triage this bug?
Alexey Proskuryakov
Comment 3 2012-05-03 00:00:44 PDT
I can reproduce this in Safari 5.1.5, but in ToT, smart links appear to be completely broken. Filed bug 85463.
Yi Shen
Comment 4 2013-04-25 17:08:37 PDT
Created attachment 199766 [details] proposed patch
Ryosuke Niwa
Comment 5 2013-04-25 17:38:36 PDT
I can’t reproduce this problem anymore. Can you?
Yi Shen
Comment 6 2013-04-29 14:28:16 PDT
Thanks for review. Yes, I can reproduce this bug on Mac with the latest webkit code. (In reply to comment #5) > I can’t reproduce this problem anymore. Can you?
WebKit Commit Bot
Comment 7 2013-04-29 15:24:12 PDT
Comment on attachment 199766 [details] proposed patch Clearing flags on attachment: 199766 Committed r149322: <http://trac.webkit.org/changeset/149322>
WebKit Commit Bot
Comment 8 2013-04-29 15:24:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.